--- a/src/pages/blog.html
+++ b/src/pages/blog.html
@@ -6,6 +6,19 @@
     <title>Blog — Tutorials, Case Studies, and Engineering Notes</title>
     <meta name="description" content="Articles on web development, performance, architecture, and real-world case studies by Hamza Arya." />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Blog — Hamza Arya Portfolio" />
+    <meta property="og:description" content="Articles on web development, performance, architecture, and real-world case studies." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hamzaarya.dev/blog" />
+    <meta property="og:image" content="/favicon.svg" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Blog — Hamza Arya Portfolio" />
+    <meta name="twitter:description" content="Articles on web development, performance, architecture, and real-world case studies." />
+    <meta name="twitter:image" content="/favicon.svg" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://hamzaarya.dev/blog" />
   </head>
   <body class="bg-gray-900 text-gray-100">
     <!-- Simple header (brand + quick links) -->
@@ -97,7 +110,41 @@
     <script type="module" src="/src/scripts/main.js"></script>
     
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Blog","name":"Hamza Blog","url":"https://hamzaarya.dev/blog"}
+    {
+      "@context": "https://schema.org",
+      "@type": "Blog",
+      "name": "Hamza Arya Blog",
+      "description": "Articles on web development, performance, architecture, and real-world case studies",
+      "url": "https://hamzaarya.dev/blog",
+      "author": {
+        "@type": "Person",
+        "name": "Hamza Arya",
+        "url": "https://hamzaarya.dev"
+      },
+      "publisher": {
+        "@type": "Person",
+        "name": "Hamza Arya",
+        "url": "https://hamzaarya.dev"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://hamzaarya.dev/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Blog",
+          "item": "https://hamzaarya.dev/blog"
+        }
+      ]
+    }
     </script>
   </body>
 </html>
