--- a/src/pages/case-studies.html
+++ b/src/pages/case-studies.html
@@ -17,6 +17,8 @@
     <meta name="twitter:title" content="Case Studies — Hamza's Project Breakdowns" />
     <meta name="twitter:description" content="Detailed case studies showcasing the complete development process and measurable business results." />
     <meta name="twitter:image" content="/favicon.svg" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://hamzaarya.dev/case-studies" />
   </head>
   <body class="bg-gray-900 text-gray-100">
     <!-- Simple header (brand + quick links) -->
@@ -112,10 +114,33 @@
     
     <script type="application/ld+json">
     {
-      "@context":"https://schema.org",
-      "@type":"CollectionPage",
-      "name":"Case Studies",
-      "url":"https://hamzaarya.dev/case-studies"
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "Case Studies — Hamza Arya",
+      "description": "Detailed case studies showcasing the complete development process and measurable business results",
+      "url": "https://hamzaarya.dev/case-studies",
+      "publisher": {
+        "@type": "Person",
+        "name": "Hamza Arya"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://hamzaarya.dev/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Case Studies",
+          "item": "https://hamzaarya.dev/case-studies"
+        }
+      ]
     }
     </script>
   </body>
