--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -17,6 +17,8 @@
     <meta name="twitter:title" content="Contact Hamza — Full-Stack Developer" />
     <meta name="twitter:description" content="Ready to start your next project? Let's discuss your requirements and create something extraordinary together." />
     <meta name="twitter:image" content="/favicon.svg" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://hamzaarya.dev/contact" />
   </head>
   <body class="bg-gray-900 text-gray-100">
     {{> header}}
@@ -56,11 +58,34 @@
     
     <script type="application/ld+json">
     {
-      "@context":"https://schema.org",
-      "@type":"ContactPage",
-      "name":"Contact Hamza Arya",
-      "url":"https://hamzaarya.dev/contact",
-      "mainEntity": {"@type":"Person","name":"Hamza Arya"}
+      "@context": "https://schema.org",
+      "@type": "ContactPage",
+      "name": "Contact Hamza Arya",
+      "description": "Get in touch with Hamza Arya for your next web development project",
+      "url": "https://hamzaarya.dev/contact",
+      "mainEntity": {
+        "@type": "Person",
+        "name": "Hamza Arya",
+        "email": "contact@hamzaarya.dev"
+      }
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://hamzaarya.dev/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Contact",
+          "item": "https://hamzaarya.dev/contact"
+        }
+      ]
     }
     </script>
   </body>
