--- a/src/pages/services.html
+++ b/src/pages/services.html
@@ -6,6 +6,19 @@
     <title>Services — Full-Stack Development, Web Apps, Performance & SEO</title>
     <meta name="description" content="End-to-end web development services: full-stack apps, SaaS, e‑commerce, performance, SEO, and DevOps." />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="Services — Hamza Arya Portfolio" />
+    <meta property="og:description" content="End-to-end web development services: full-stack apps, SaaS, e‑commerce, performance, SEO, and DevOps." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hamzaarya.dev/services" />
+    <meta property="og:image" content="/favicon.svg" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Services — Hamza Arya Portfolio" />
+    <meta name="twitter:description" content="End-to-end web development services: full-stack apps, SaaS, e‑commerce, performance, SEO, and DevOps." />
+    <meta name="twitter:image" content="/favicon.svg" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://hamzaarya.dev/services" />
   </head>
   <body class="bg-gray-900 text-gray-100">
     <!-- Simple header (brand + quick links) -->
@@ -172,7 +185,47 @@
     <script type="module" src="/src/scripts/main.js"></script>
     
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"WebSite","name":"Hamza Services","url":"https://hamzaarya.dev/services"}
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Web Development Services",
+      "provider": {
+        "@type": "Person",
+        "name": "Hamza Arya",
+        "url": "https://hamzaarya.dev"
+      },
+      "areaServed": "Worldwide",
+      "availableChannel": {
+        "@type": "ServiceChannel",
+        "serviceUrl": "https://hamzaarya.dev/services",
+        "servicePhone": "",
+        "serviceSmsNumber": "",
+        "servicePostalAddress": {
+          "@type": "PostalAddress",
+          "addressLocality": "Lahore",
+          "addressCountry": "PK"
+        }
+      },
+      "description": "End-to-end web development services: full-stack apps, SaaS, e‑commerce, performance, SEO, and DevOps."
+    },
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://hamzaarya.dev/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Services",
+          "item": "https://hamzaarya.dev/services"
+        }
+      ]
+    }
     </script>
   </body>
 </html>
