refactor: improve testimonials section and enhance mobile navigation accessibility
This commit enhances the testimonials section by updating the layout and adding JSON-LD structured data for better SEO. It also improves the mobile navigation by implementing focus trapping and keyboard accessibility features, ensuring a more user-friendly experience. Additionally, the CSS has been refined for better styling consistency and responsiveness.

--- a/index.html
+++ b/index.html
@@ -126,12 +126,7 @@
       ]
     </script>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
+    
     <!-- Preload hero images -->
     <link
       rel="preload"
@@ -2215,7 +2210,7 @@
     <!-- Testimonials -->
     <section
       id="testimonials"
-      class="py-24 bg-gray-900 relative overflow-hidden cv-auto"
+      class="py-24 bg-black w-full relative overflow-visible cv-auto"
       aria-labelledby="testimonials-heading"
     >
       <!-- Background decoration -->
@@ -2228,7 +2223,7 @@
         data-parallax="0.05"
       ></div>
 
-      <div class="container-pro relative">
+      <div class="container-pro relative z-10">
         <div class="text-center mb-16">
           <h2 id="testimonials-heading" class="text-4xl font-bold mb-4">
             What Clients Say
