feat: implement admin access shortcut and enhance admin user management
This commit introduces a keyboard shortcut for quick access to the admin panel by detecting the input of the word "admin". Additionally, the admin user management functionality has been refactored to read from a JSON file instead of a database, improving maintainability and simplifying the authentication process. The Vite configuration has also been updated to route admin requests to the appropriate HTML page.

--- a/index.html
+++ b/index.html
@@ -2517,5 +2517,18 @@
     {{> footer}}
 
     <script type="module" src="/src/scripts/main.js"></script>
+    <script>
+      (function(){
+        let buffer = '';
+        document.addEventListener('keydown', function(e) {
+          buffer += e.key;
+          if (buffer.length > 5) buffer = buffer.slice(-5);
+          if (buffer.toLowerCase() === 'admin') {
+            buffer = '';
+            window.location.href = '/admin';
+          }
+        });
+      })();
+    </script>
   </body>
 </html>
