--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Performance hints -->
     <link rel="preload" href="/src/styles/main.css" as="style" />
     <link rel="stylesheet" href="/src/styles/main.css" />
-    
+
     <!-- Skip to main content for accessibility -->
     <style>
       .skip-to-content {
@@ -193,7 +193,7 @@
     >
       <div class="px-3 sm:px-4 my-2">
         <nav
-          class="container-pro glass-professional rounded-full flex h-16 items-center justify-between"
+          class="container-pro nav-glass rounded-full flex h-16 items-center justify-between"
           aria-label="Main navigation"
         >
           <div class="flex items-center gap-6">
@@ -239,7 +239,7 @@
                   </svg>
                 </button>
                 <div
-                  class="absolute left-0 top-full z-50 mt-2 w-56 card p-2 invisible opacity-0 translate-y-1 transition-all duration-200 ease-out group-hover:visible group-hover:opacity-100 group-hover:translate-y-0 focus-within:visible focus-within:opacity-100 focus-within:translate-y-0"
+                  class="nav-glass absolute left-0 top-full z-50 mt-2 w-56 card p-2 opacity-0 translate-y-1 transition-all duration-200 ease-out group-hover:visible group-hover:opacity-100 group-hover:translate-y-0 focus-within:visible focus-within:opacity-100 focus-within:translate-y-0"
                   role="menu"
                 >
                   <a href="#projects" class="nav-link w-full" role="menuitem"
@@ -506,7 +506,10 @@
             </div>
 
             <!-- Enhanced description -->
-            <p id="hero-subtitle" class="text-white/90 text-xl max-w-2xl leading-relaxed">
+            <p
+              id="hero-subtitle"
+              class="text-white/90 text-xl max-w-2xl leading-relaxed"
+            >
               I build
               <span class="text-blue-300 font-semibold"
                 >high-performance web applications</span
@@ -2518,9 +2521,9 @@
 
     <script type="module" src="/src/scripts/main.js"></script>
     <script>
-      (function(){
+      (function () {
         let buffer = '';
-        document.addEventListener('keydown', function(e) {
+        document.addEventListener('keydown', function (e) {
           buffer += e.key;
           if (buffer.length > 5) buffer = buffer.slice(-5);
           if (buffer.toLowerCase() === 'admin') {
