feat: add notification system and web vitals tracking
- Implemented a notification system with various types (success, error, warning, info) and customizable duration.
- Added functionality to handle form submissions with feedback notifications.
- Integrated web vitals tracking to monitor performance metrics such as TTFB, FCP, and LCP.
- Created a service worker registration and update notification system.
- Added a public redirect configuration for the index page.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
       class="fixed inset-x-0 top-0 z-50 transition-colors"
       role="banner"
     >
-      <div class="px-3 sm:px-4 my-2">
+      <div class="px-3 sm:px-4 my-2 fixed top-2 right-0 w-full">
         <nav
           class="container-pro nav-glass rounded-full flex h-16 items-center justify-between"
           aria-label="Main navigation"
