feat: update services link to redirect to shop page

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
           </div>
           <div class="hidden md:flex items-center gap-2">
             <a
-              href="/pages/services.html"
-              aria-label="Services"
+              href="https://shop-hamzaarya.netlify.app/"
+              aria-label="Shop"
               class="btn-minimal"
             >
               <svg
@@ -361,8 +361,8 @@
           <a href="/pages/contact.html" class="nav-link">Contact</a>
           <div class="flex gap-3 pt-2">
             <a
-              href="/pages/services.html"
-              aria-label="Services"
+              href="https://shop-hamzaarya.netlify.app/"
+              aria-label="Shop"
               class="btn-ghost"
             >
               <svg
