--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
           "image": "https://hamzaarya.dev/favicon.svg",
           "jobTitle": "Full-Stack Developer",
           "description": "Full-stack developer building fast, reliable web apps for startups, brands, and founders.",
-          "email": "contact@hamzaarya.dev",
+          "email": "hamzaarya123@gmail.com",
           "address": {
-            "@type": "PostalAddress",
-            "addressLocality": "Lahore",
-            "addressCountry": "PK"
+            "@type": "1006",
+            "addressLocality": "Kabul",
+            "addressCountry": "AF"
           },
           "sameAs": [
             "https://github.com/hamzaarya",
@@ -119,7 +119,7 @@
           },
           "contactPoint": {
             "@type": "ContactPoint",
-            "email": "contact@hamzaarya.dev",
+            "email": "hamzaarya123@gmail.com",
             "contactType": "General Inquiries",
             "availableLanguage": "English"
           },
@@ -611,7 +611,7 @@
                     stroke-width="2"
                   />
                 </svg>
-                <span>Timezone‑friendly (PKT)</span>
+                <span>Timezone‑friendly (AF)</span>
               </li>
             </ul>
 
@@ -621,12 +621,21 @@
                 Trusted by
               </div>
               <div class="mt-2 flex items-center gap-4 opacity-80">
-                <span class="h-2 w-16 rounded-full bg-white/15"></span>
-                <span class="h-2 w-12 rounded-full bg-white/15"></span>
-                <span class="h-2 w-20 rounded-full bg-white/15"></span>
-                <span
-                  class="h-2 w-10 rounded-full bg-white/15 hidden sm:inline"
-                ></span>
+                <a href="https://stripe.com" target="_blank" rel="noopener noreferrer" aria-label="Stripe" class="trusted-logo">
+                  <img src="/images/logos/stripe.svg" alt="Stripe" width="96" height="20" loading="lazy" decoding="async" class="h-6 w-auto"/>
+                </a>
+
+                <a href="https://vercel.com" target="_blank" rel="noopener noreferrer" aria-label="Vercel" class="trusted-logo">
+                  <img src="/images/logos/vercel.svg" alt="Vercel" width="72" height="20" loading="lazy" decoding="async" class="h-5 w-auto"/>
+                </a>
+
+                <a href="https://aws.amazon.com" target="_blank" rel="noopener noreferrer" aria-label="AWS" class="trusted-logo">
+                  <img src="/images/logos/aws.svg" alt="AWS" width="96" height="20" loading="lazy" decoding="async" class="h-6 w-auto"/>
+                </a>
+
+                <a href="https://github.com" target="_blank" rel="noopener noreferrer" aria-label="GitHub" class="trusted-logo hidden sm:inline">
+                  <img src="/images/logos/github.svg" alt="GitHub" width="80" height="20" loading="lazy" decoding="async" class="h-5 w-auto"/>
+                </a>
               </div>
             </div>
 
@@ -2376,8 +2385,8 @@
                   </svg>
                   <a
                     class="hover:text-white underline decoration-white/20 underline-offset-4"
-                    href="mailto:contact@hamzaarya.dev"
-                    >contact@hamzaarya.dev</a
+                    href="mailto:hamzaarya123@gmail.com"
+                    >hamzaarya123@gmail.com</a
                   >
                 </div>
                 <div class="inline-flex items-center gap-3 text-gray-300">
@@ -2421,7 +2430,7 @@
                       stroke-width="2"
                     />
                   </svg>
-                  <span>Based in Lahore, PK • Remote-friendly</span>
+                  <span>Based in Kabul, AF • Remote-friendly</span>
                 </div>
               </div>
 
@@ -2499,7 +2508,7 @@
                   />
                   <div class="flex items-center gap-3 pt-2">
                     <button class="btn-primary" type="submit">Send</button>
-                    <a class="btn-ghost" href="mailto:contact@hamzaarya.dev"
+                    <a class="btn-ghost" href="mailto:hamzaarya123@gmail.com"
                       >Email me</a
                     >
                   </div>
