--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -91,7 +91,7 @@
             </li>
             <li class="hero-badge">
               <svg width="14" height="14" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M21 10c0 6-9 12-9 12S3 16 3 10a9 9 0 1 1 18 0z" stroke="currentColor" stroke-width="2"/><circle cx="12" cy="10" r="3" stroke="currentColor" stroke-width="2"/></svg>
-              <span>Timezone‑friendly (PKT)</span>
+              <span>Timezone‑friendly (AFG)</span>
             </li>
           </ul>
         </div>
@@ -202,7 +202,7 @@
       "description": "Full-stack developer building fast, reliable web apps for startups, brands, and founders.",
       "url": "https://hamzaarya.dev",
       "image": "https://hamzaarya.dev/favicon.svg",
-      "email": "contact@hamzaarya.dev",
+      "email": "hamzaarya123@gmail.com",
       "knowsAbout": ["Web Development", "Full-Stack Development", "React", "Node.js", "PostgreSQL", "AWS", "TypeScript"],
       "sameAs": [
         "https://github.com/hamza",
