feat: implement comprehensive SEO, accessibility, and navigation improvements
- Added a new summary document detailing critical bug fixes and SEO enhancements.
- Fixed Schema.org JSON-LD issues for better structured data validation.
- Introduced a skip-to-content link for improved accessibility.
- Updated footer links to correct paths and usernames for social media.
- Enhanced SEO meta tags with absolute URLs and added image dimensions.
- Corrected sitemap.xml URLs and added missing pages for better search engine indexing.
- Ensured all changes maintain backward compatibility and follow existing code patterns.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://hamzaarya.dev" />
-    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:image" content="https://hamzaarya.dev/favicon.svg" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <meta property="og:image:alt" content="Hamza Arya - Full-Stack Developer" />
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Hamza — Full-Stack Developer" />
@@ -25,7 +28,8 @@
       name="twitter:description"
       content="I build fast, reliable web apps that turn ideas into profit."
     />
-    <meta name="twitter:image" content="/favicon.svg" />
+    <meta name="twitter:image" content="https://hamzaarya.dev/favicon.svg" />
+    <meta name="twitter:image:alt" content="Hamza Arya - Full-Stack Developer" />
     <!-- Canonical URL -->
     <link rel="canonical" href="https://hamzaarya.dev/" />
     <link rel="preconnect" href="https://images.unsplash.com" />
@@ -68,6 +72,7 @@
         outline-offset: 2px;
       }
     </style>
+    <a href="#main-content" class="skip-to-content">Skip to main content</a>
 
     <script type="application/ld+json">
       [
@@ -81,7 +86,7 @@
           "description": "Full-stack developer building fast, reliable web apps for startups, brands, and founders.",
           "email": "hamzaarya123@gmail.com",
           "address": {
-            "@type": "1006",
+            "@type": "PostalAddress",
             "addressLocality": "Kabul",
             "addressCountry": "AF"
           },
