--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -187,7 +187,7 @@
             <!-- Right: Contact form -->
             <div data-reveal class="opacity-0 translate-y-6">
               <div class="glass rounded-2xl p-6 sm:p-8 border border-white/10">
-                <form data-contact class="grid gap-4">
+                <form data-contact class="grid gap-4" netlify>
                   <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
                     <label class="sr-only" for="contact-name">Name</label>
                     <input
