Add /dist to .gitignore and update assets
Ignore build artifacts and node_modules, add dist.zip, remove outdated compiled dist JS assets, and apply updates to HTML, JS and CSS source files. Changes include .gitignore additions (/dist/, /node_modules/), new dist.zip, deletions of several dist/assets JS files, and modifications to dist/index.html, index.html, src/scripts/main.js, src/scripts/modules/core.js, src/scripts/modules/hero.js, src/styles/components.css, and src/styles/site.css.

--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
               class="opacity-10"
               style="width: 100%; height: 100%"
               decoding="async"
-              loading="lazy"
-              fetchpriority="low"
+              loading="eager"
+              fetchpriority="high"
             />
           </div>
 
