Eager sync project render, reveal & fetch timeout
Paint project cards synchronously on DOMContentLoaded and improve UX/resilience for project loading and reveals. Changes include:

- index.html: add a loading placeholder in #projects-grid.
- main.js: call renderProjectsSync() early to paint cards immediately, bind lazy image & reveal observers as a fast-path, and eagerly import testimonials with autoplay.
- core.js: relax IntersectionObserver sensitivity (threshold 0.05, 100px rootMargin) and add revealVisible() to unhide any [data-reveal] elements already in view on load.
- projects.js: introduce a 4s AbortController timeout for remote fetch; split HTML generation into buildProjectsHTML(); add revealCardsAndBindImages() helper; add renderProjectsSync() for instant local-first rendering and keep renderProjects() to re-render after fetching remote data. Also make image/link/tech parsing more defensive (safe fallbacks for missing fields).

Overall this improves perceived load speed, makes reveal behavior more robust on first paint, and guards against slow remote project endpoints.

--- a/index.html
+++ b/index.html
@@ -1612,7 +1612,9 @@
           <div
             id="projects-grid"
             class="projects-grid grid gap-8 sm:grid-cols-2 lg:grid-cols-3"
-          ></div>
+          >
+            <p class="col-span-full text-gray-400 text-center py-8" id="projects-grid-placeholder">Loading projects…</p>
+          </div>
 
           <!-- View More Button -->
           <div class="text-center mt-16">
